add base mainviewmodel class

--- a/tikitwo-steam-cleaner/tikitwo-steam-cleaner.UWP.csproj
+++ b/tikitwo-steam-cleaner/tikitwo-steam-cleaner.UWP.csproj
@@ -101,6 +101,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
