--- a/tikitwo-steam-cleaner/project.json
+++ b/tikitwo-steam-cleaner/project.json
@@ -1,7 +1,9 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Prism.Core": "6.0.1"
+    "Prism.Core": "6.0.1",
+    "Prism.Autofac": "6.0.1",
+    "Autofac": "3.5.2"
   },
   "frameworks": {
     "uap10.0": {}
