add commands and bindings to manually and automatically find the user's steam folder

--- a/tikitwo-steam-cleaner.WPF/tikitwo-steam-cleaner.WPF.csproj
+++ b/tikitwo-steam-cleaner.WPF/tikitwo-steam-cleaner.WPF.csproj
@@ -56,6 +56,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -120,6 +121,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\tikitwo-steam-cleaner.Application\tikitwo-steam-cleaner.Application.csproj">
+      <Project>{64E9BF93-0415-4C67-96D2-5430E9AB304D}</Project>
+      <Name>tikitwo-steam-cleaner.Application</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
