add new delete packages command and update UI a bit; use temp data for now

--- a/tikitwo-steam-cleaner.WPF/tikitwo-steam-cleaner.WPF.csproj
+++ b/tikitwo-steam-cleaner.WPF/tikitwo-steam-cleaner.WPF.csproj
@@ -85,6 +85,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Di.cs" />
+    <Compile Include="Models\FolderThing.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -119,9 +120,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\tikitwo-steam-cleaner.Application\tikitwo-steam-cleaner.Application.csproj">
       <Project>{64E9BF93-0415-4C67-96D2-5430E9AB304D}</Project>
