--- a/tikitwo-steam-cleaner.Application/tikitwo-steam-cleaner.Application.csproj
+++ b/tikitwo-steam-cleaner.Application/tikitwo-steam-cleaner.Application.csproj
@@ -41,10 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\FolderThing.cs" />
     <Compile Include="Services\LogicalDriveService.cs" />
     <Compile Include="Services\SteamFolderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
