--- a/tikitwo-steam-cleaner.Application/tikitwo-steam-cleaner.Application.csproj
+++ b/tikitwo-steam-cleaner.Application/tikitwo-steam-cleaner.Application.csproj
@@ -42,7 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\FolderThing.cs" />
+    <Compile Include="Services\ApplicationSettings.cs" />
+    <Compile Include="Services\DirectoryServicve.cs" />
     <Compile Include="Services\LogicalDriveService.cs" />
+    <Compile Include="Services\RedistFileService.cs" />
     <Compile Include="Services\SteamFolderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
