add all settings to the app.config and refactor the "meat" of the program to use the new services and such

--- a/tikitwo-steam-cleaner.WPF/App.config
+++ b/tikitwo-steam-cleaner.WPF/App.config
@@ -1,7 +1,72 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
+    <configSections>
+        <section name="RedistFolders" type="System.Configuration.NameValueFileSectionHandler,System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <section name="RedistFiles" type="System.Configuration.NameValueFileSectionHandler,System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    </configSections>
+
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+
+    <appSettings>
+        <add key="SteamFolder" value="Steam" />
+        <add key="Program Files x86" value="Program Files (x86)" />
+        <add key="Program Files x64" value="Program Files" />
+    </appSettings>
+
+    <RedistFolders>
+        <add key="^gfwlivesetup\.exe$" value="MS Games For Windows Live" />
+        <add key="^(vcredist){1}.*(\.exe)$" value="MS Visual C++ Redist" />
+        <add key="^(physx){1}.+(systemsoftware.exe){1}$" value="NVidia PhysX" />
+        <add key="^(arcadeinstallfull){1}.*(\.exe)$" value="GameSpy Arcade" />
+        <add key="^gamespyinstaller220std\.exe$" value="GameSpy Arcade" />
+        <add key="^(xna){1}.*(\.msi)$" value="MS XNA Framework Redist" />
+        <add key="^xnafx40_redist\.msi$" value="MS XNA Framework Redist" />
+        <add key="^(dotnet).*(setup\.exe)$" value="MS .NET Framework Redist" />
+        <add key="^(dotnet).*(x86_x64\.exe)$" value="MS .NET Framework Redist (64-bit)" />
+        <add key="^dotnetfx35\.exe$" value="MS .NET Framework Redist" />
+        <add key="^openalweax\.exe$" value="OpenAL" />
+        <add key="^dxwebsetup\.exe$" value="MS DirectX Web Installer" />
+        <add key="^ndP451-kb2872776-x86-x64-allos-enu\.exe$" value="Takedown Red Sabre Redist" />
+        <add key="^(rapture3d_){1}.*(game\.exe)$" value="Rapture 3D" />
+        <add key="^amd_dcoptsetup\.exe$" value="AMD Dual-Core Optimizer" />
+        <add key="^amd_dcoptsetup\.ex$" value="AMD Dual-Core Optimizer" />
+        <add key="^msxml4-kb954430-enu\.exe$" value="MS XML Redist" />
+        <add key="^msxml4-kb973688-enu\.exe$" value="MS XML Redist" />
+        <add key="^wic_x64_enu\.exe$" value="MS .NET Framework Redist" />
+        <add key="^wic_x86_enu\.exe$" value="MS .NET Framework Redist" />
+        <add key="^xpsepsc-amd64-en-us\.exe$" value="MS .NET Framework Redist (64-bit)" />
+        <add key="^xpsepsc-x86-en-us\.exe$" value="MS .NET Framework Redist" />
+        <add key="^dotnetfx40_client_x86_x64\.exe$" value="MS .NET Framework Redist (64-bit)" />
+        <add key="^netfx35_ia64\.exe$" value="MS .NET Framework Redist (Itanium)" />
+        <add key="^netfx35_x64\.exe$" value="MS .NET Framework Redist (64-bit)" />
+        <add key="^netfx35_x86\.exe$" value="MS .NET Framework Redist" />
+        <add key="^setup_battleyearma2\.exe$" value="BattlEye Anti-Cheat Engine" />
+    </RedistFolders>
+
+    <RedistFiles>
+        <add key="^directx$" value="MS DirectX" />
+        <add key="^dxredist$" value="MS DirectX" />
+        <add key="^directx_redist$" value="MS DirectX" />
+        <add key="^dx_redist_install$" value="MS DirectX" />
+        <add key="^directxredist$" value="MS DirectX" />
+        <add key="^dx[ \t\n\x0B\f\r]redist$" value="MS DirectX" />
+        <add key="^directx_jun_2010$" value="MS DirectX" />
+        <add key="^directx_aug_2009$" value="MS DirectX" />
+        <add key="^msvcrt$" value="MS Visual C++ Redist(s)" />
+        <add key="^vcredist$" value="MS Visual C++ Redist(s)" />
+        <add key="^g4w$" value="MS Games For Windows Live" />
+        <add key="^dependencies$" value="Many redistributables" />
+        <add key="^prerequisite(s)?$" value="Many redistributables" />
+        <add key="^installer(s)?$" value="Many redistributables" />
+        <add key="^redist(s)?$" value="Many redistributables" />
+        <add key=".*__redist(s)?$" value="Many redistributables" />
+        <add key=".*__installer(s)?$" value="Many redistributables" />
+        <add key="^_commonredist(s)?$" value="Many redistributables" />
+        <add key="^(_)+redist(s)?$" value="Many redistributables" />
+        <add key="^ue3redist?$" value="Many UE3 redistributables" />
+        <add key="^redistributable(s)?$" value="Many redistributables" />
+    </RedistFiles>
 </configuration>
