--- a/tikitwo-steam-cleaner.WPF/App.config
+++ b/tikitwo-steam-cleaner.WPF/App.config
@@ -41,32 +41,32 @@
     </RedistFolders>
 
     <RedistFiles>
-        <add key="^gfwlivesetup\.exe" value="MS Games For Windows Live" />
-        <add key="^(vcredist){1}.*(\.exe)" value="MS Visual C++ Redist" />
-        <add key="^(physx){1}.+(systemsoftware.exe){1}" value="NVidia PhysX" />
-        <add key="^(arcadeinstallfull){1}.*(\.exe)" value="GameSpy Arcade" />
-        <add key="^gamespyinstaller220std\.exe" value="GameSpy Arcade" />
-        <add key="^(xna){1}.*(\.msi)" value="MS XNA Framework Redist" />
-        <add key="^xnafx40_redist\.msi" value="MS XNA Framework Redist" />
-        <add key="^(dotnet).*(setup\.exe)" value="MS .NET Framework Redist" />
-        <add key="^(dotnet).*(x86_x64\.exe)" value="MS .NET Framework Redist (64-bit)" />
-        <add key="^dotnetfx35\.exe" value="MS .NET Framework Redist" />
-        <add key="^openalweax\.exe" value="OpenAL" />
-        <add key="^dxwebsetup\.exe" value="MS DirectX Web Installer" />
-        <add key="^ndP451-kb2872776-x86-x64-allos-enu\.exe" value="Takedown Red Sabre Redist" />
-        <add key="^(rapture3d_){1}.*(game\.exe)" value="Rapture 3D" />
-        <add key="^amd_dcoptsetup\.exe" value="AMD Dual-Core Optimizer" />
-        <add key="^amd_dcoptsetup\.ex" value="AMD Dual-Core Optimizer" />
-        <add key="^msxml4-kb954430-enu\.exe" value="MS XML Redist" />
-        <add key="^msxml4-kb973688-enu\.exe" value="MS XML Redist" />
-        <add key="^wic_x64_enu\.exe" value="MS .NET Framework Redist" />
-        <add key="^wic_x86_enu\.exe" value="MS .NET Framework Redist" />
-        <add key="^xpsepsc-amd64-en-us\.exe" value="MS .NET Framework Redist (64-bit)" />
-        <add key="^xpsepsc-x86-en-us\.exe" value="MS .NET Framework Redist" />
-        <add key="^dotnetfx40_client_x86_x64\.exe" value="MS .NET Framework Redist (64-bit)" />
-        <add key="^netfx35_ia64\.exe" value="MS .NET Framework Redist (Itanium)" />
-        <add key="^netfx35_x64\.exe" value="MS .NET Framework Redist (64-bit)" />
-        <add key="^netfx35_x86\.exe" value="MS .NET Framework Redist" />
-        <add key="^setup_battleyearma2\.exe" value="BattlEye Anti-Cheat Engine" />
+        <add key="gfwlivesetup\.exe" value="MS Games For Windows Live" />
+        <add key="(vcredist){1}.*(\.exe)" value="MS Visual C++ Redist" />
+        <add key="(physx){1}.+(systemsoftware.exe){1}" value="NVidia PhysX" />
+        <add key="(arcadeinstallfull){1}.*(\.exe)" value="GameSpy Arcade" />
+        <add key="gamespyinstaller220std\.exe" value="GameSpy Arcade" />
+        <add key="(xna){1}.*(\.msi)" value="MS XNA Framework Redist" />
+        <add key="xnafx40_redist\.msi" value="MS XNA Framework Redist" />
+        <add key="(dotnet).*(setup\.exe)" value="MS .NET Framework Redist" />
+        <add key="(dotnet).*(x86_x64\.exe)" value="MS .NET Framework Redist (64-bit)" />
+        <add key="dotnetfx35\.exe" value="MS .NET Framework Redist" />
+        <add key="openalweax\.exe" value="OpenAL" />
+        <add key="dxwebsetup\.exe" value="MS DirectX Web Installer" />
+        <add key="ndP451-kb2872776-x86-x64-allos-enu\.exe" value="Takedown Red Sabre Redist" />
+        <add key="(rapture3d_){1}.*(game\.exe)" value="Rapture 3D" />
+        <add key="amd_dcoptsetup\.exe" value="AMD Dual-Core Optimizer" />
+        <add key="amd_dcoptsetup\.ex" value="AMD Dual-Core Optimizer" />
+        <add key="msxml4-kb954430-enu\.exe" value="MS XML Redist" />
+        <add key="msxml4-kb973688-enu\.exe" value="MS XML Redist" />
+        <add key="wic_x64_enu\.exe" value="MS .NET Framework Redist" />
+        <add key="wic_x86_enu\.exe" value="MS .NET Framework Redist" />
+        <add key="xpsepsc-amd64-en-us\.exe" value="MS .NET Framework Redist (64-bit)" />
+        <add key="xpsepsc-x86-en-us\.exe" value="MS .NET Framework Redist" />
+        <add key="dotnetfx40_client_x86_x64\.exe" value="MS .NET Framework Redist (64-bit)" />
+        <add key="netfx35_ia64\.exe" value="MS .NET Framework Redist (Itanium)" />
+        <add key="netfx35_x64\.exe" value="MS .NET Framework Redist (64-bit)" />
+        <add key="netfx35_x86\.exe" value="MS .NET Framework Redist" />
+        <add key="setup_battleyearma2\.exe" value="BattlEye Anti-Cheat Engine" />
     </RedistFiles>
 </configuration>
