move actual delete functionality to delete service from directory service, and get sizes in parallel for performance

--- a/tikitwo-steam-cleaner.Application/tikitwo-steam-cleaner.Application.csproj
+++ b/tikitwo-steam-cleaner.Application/tikitwo-steam-cleaner.Application.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Models\RedistItem.cs" />
     <Compile Include="Models\ItemTypeEnum.cs" />
     <Compile Include="Services\ApplicationSettings.cs" />
+    <Compile Include="Services\DeleteService.cs" />
     <Compile Include="Services\DirectoryService.cs" />
     <Compile Include="Services\LogicalDriveService.cs" />
     <Compile Include="Services\RedistFileService.cs" />
