remove copy\paste functionality since it doesn't work, update app setting regexes, and show errors/warnings in certain places for no folders to delete

--- a/tikitwo-steam-cleaner.WPF/App.config
+++ b/tikitwo-steam-cleaner.WPF/App.config
@@ -25,19 +25,19 @@
     <add key="dx[ \t\n\x0B\f\r]redist" value="MS DirectX" />
     <add key="directx_jun_2010" value="MS DirectX" />
     <add key="directx_aug_2009" value="MS DirectX" />
-    <add key="msvcrt" value="MS Visual C++ Redist(s)" />
-    <add key="vcredist" value="MS Visual C++ Redist(s)" />
+    <add key="msvcrt" value="MS Visual C++ Redists" />
+    <add key="vcredist" value="MS Visual C++ Redists" />
     <add key="g4w" value="MS Games For Windows Live" />
     <add key="dependencies" value="Many redistributables" />
-    <add key="prerequisite(s)?" value="Many redistributables" />
-    <add key="installer(s)?" value="Many redistributables" />
-    <add key="redist(s)?" value="Many redistributables" />
-    <add key=".*__redist(s)?" value="Many redistributables" />
-    <add key=".*__installer(s)?" value="Many redistributables" />
-    <add key="_commonredist(s)?" value="Many redistributables" />
-    <add key="(_)+redist(s)?" value="Many redistributables" />
+    <add key="prerequisite[s]?" value="Many redistributables" />
+    <add key="installer[s]?" value="Many redistributables" />
+    <add key="redist[s]?" value="Many redistributables" />
+    <add key=".*__redist[s]?" value="Many redistributables" />
+    <add key=".*__installer[s]?" value="Many redistributables" />
+    <add key="_commonredist[s]?" value="Many redistributables" />
+    <add key="(_)+redist[s]?" value="Many redistributables" />
     <add key="ue3redist?" value="Many UE3 redistributables" />
-    <add key="redistributable(s)?" value="Many redistributables" />
+    <add key="redistributable[s]?" value="Many redistributables" />
   </RedistFolders>
 
   <RedistFiles>
